Thu Aug 28 14:15:46 2003  Jonathan Graehl  <graehl@brahms.isi.edu>

	* src/config.h (CONFIG_H): define DOUBLE_PRECISION to use doubles
 	instead of floats (probably 25% more memory would be used in a
 	transducer, and 70% more in training)

Wed Aug 27 17:12:16 2003  Jonathan Graehl  <graehl@brahms.isi.edu>

	* src/train.cc: -o 1.1 scales EM changes, new code to deal with anomoly that EM can worsen perplexity if tied arcs make normalization unstable/nonconvergent (e.g. span.spell.wfst).  related changes in several files.

Tue May 20 17:14:36 2003  Jonathan Graehl  <graehl@enescu.isi.edu>

	* marcu hide-the-transducer changes (if #define MARCU in finite.cc)

2003-03-28  Jonathan Graehl  <graehl@isi.edu>

	* src/wfstio.cc: added option (-K) to force state names, otherwise
	assume if finalstate is an integer, that states are unnamed
	(non-sparse integer indices)

	* src/strhash.h: fixed STRINGPOOL, added named_states flag
	(stateName not thread-safe if unnamed states)

2003-03-27  Jonathan Graehl  <graehl@isi.edu>

	* src/finite.cc: ownalphabet in compose chain - copies (rather
	than transfers) alphabet ... performance ...  unify code for -l
	and -r (loops have start, end, direction +1 or -1; or, reverse
	list and use same loop (but switch order of arguments if you do))
	-q = quiet (added some default logging)

2002-12-17  Jonathan Graehl  <graehl@isi.edu>

	* src/wfstio.cc: ignore/strip CR char (so unix carmel can process
	DOS-text output); added graphvis 8.5x11 landscape formatting

2002-12-16  Jonathan Graehl  <graehl@isi.edu>

	* src/wfstio.cc: implemented -Y (GraphViz)

	* src/2hash.h: moved static pool allocator stuff into #ifdef
	CUSTOMNEW and tested with/without it defined

	* src/finite.cc: added -Y option for output of GraphViz .dot files

2002-12-13  Jonathan Graehl  <graehl@isi.edu>

	removed leftover node.h (old homegrown list) from CVS

	* src/slist.h: (and many other files) - when USE_SLIST defined in